started adapting cosp

--- a/Notebooks/cosp_diagnostics.ipynb
+++ b/Notebooks/cosp_diagnostics.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# COSP Diagnostics\n",
+    "\n",
+    "We will look at some COSP output from CESM2. \n",
+    "\n",
+    "Data location will be on `glade/collections/`\n",
+    "\n",
+    "Observations need to be staged somewhere."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 333,
    "metadata": {},
@@ -22,6 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MODEL DATA\n",
+    "\n",
+    "\n",
     "ds032 = xr.open_dataset(\"/Users/brianpm/Dropbox/Data/vres_L032.CLD_CAL.ncrcat.nc\")\n",
     "ds064 = xr.open_dataset(\"/Users/brianpm/Dropbox/Data/vres_L064.CLD_CAL.ncrcat.nc\")\n",
     "ds128 = xr.open_dataset(\"/Users/brianpm/Dropbox/Data/vres_L128.CLD_CAL.ncrcat.nc\")\n",
