Update README for Scatter Plots.

--- a/Examples/Notebooks/Scatter_Plots.ipynb
+++ b/Examples/Notebooks/Scatter_Plots.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Scatter plots are one of the fundamental kinds of charts. They are pretty easy to make in NCL, and very easy to make with python and matplotlib. \n",
     "\n",
-    "Most of what is demonstrated here is less about the scatter plot itself than about customizing the markers or adding other kinds of decorations. We also have two examples below where we fit a curve to some data (linear and polynomial). There's also a rolling average example, examples of putting markers on a map or using a polar plot, and a demonstration of how to bin data. WE "
+    "Most of what is demonstrated here is less about the scatter plot itself than about customizing the markers or adding other kinds of decorations. We also have two examples below where we fit a curve to some data (linear and polynomial). There's also a rolling average example, examples of putting markers on a map or using a polar plot, and a demonstration of how to bin data. We also see how to add errorbars (pretty trivial with matplotlib, compared to NCL), and how to color the axis background and add grid lines."
    ]
   },
   {
