example of downloading files

--- a/Notebooks/polar_like_amwg.ipynb
+++ b/Notebooks/polar_like_amwg.ipynb
@@ -11,12 +11,12 @@
     "\n",
     "Keeping the circular shape when not using the full global domain requires setting a boundary on the map. This code comes directly from the Cartopy examples gallery. \n",
     "\n",
-    "This notebook was used to develop a script for the "
+    "This notebook was used to develop a script for the ADF polar plots. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 123,
    "id": "8e96bfcf-b2bf-46a5-8ded-ef9f49d4ffd1",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,6 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
-    "# from matplotlib.colorbar import Colorbar\n",
     "import numpy as np\n",
     "\n",
     "\n",
