mpas to healpix to zarr

--- a/healpix/check_mpas_hp_zarr_out.ipynb
+++ b/healpix/check_mpas_hp_zarr_out.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,25 +45,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "zoom = 1, exist: True, (1, 48)\n",
+      "zoom = 2, exist: True, (1, 192)\n",
+      "zoom = 3, exist: True, (1, 768)\n",
+      "zoom = 4, exist: True, (1, 3072)\n",
+      "zoom = 5, exist: True, (1, 12288)\n",
+      "zoom = 6, exist: True, (1, 49152)\n",
+      "zoom = 7, exist: True, (1, 196608)\n",
+      "zoom = 8, exist: True, (1, 786432)\n",
+      "zoom = 9, exist: True, (1, 3145728)\n",
+      "zoom = 10, exist: True, (1, 12582912)\n"
      ]
     }
    ],
    "source": [
     "loc = Path(\"/glade/derecho/scratch/brianpm/healpix/\")\n",
     "\n",
-    "zoom = 3\n",
-    "\n",
-    "zfil = loc / f\"test3_mpas_to_hp{zoom}.zarr\"\n",
-    "print(zfil.exists())\n",
-    "ds = xr.open_dataset(zfil)"
+    "for zoom in range(1, 11):\n",
+    "    zfil = loc / f\"test3_mpas_to_hp{zoom}.zarr\"\n",
+    "    if zfil.exists():\n",
+    "        ds = xr.open_dataset(zfil)\n",
+    "        print(f\"zoom = {zoom}, exist: {zfil.exists()}, {ds['ivt'].shape}\")"
    ]
   },
   {
