--- a/healpix/mpas_to_healpix.ipynb
+++ b/healpix/mpas_to_healpix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,8 +95,8 @@
      "output_type": "stream",
      "text": [
       "Variables with S64 dtype: ['initial_time', 'xtime']\n",
-      "CPU times: user 26.2 ms, sys: 112 ms, total: 138 ms\n",
-      "Wall time: 136 ms\n"
+      "CPU times: user 532 ms, sys: 265 ms, total: 797 ms\n",
+      "Wall time: 1.66 s\n"
      ]
     },
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,29 +343,42 @@
     "        if var not in dataset.dims\n",
     "    }\n",
     "\n",
-    "def mpas_hp_to_zarr(ds, zoom, outloc, zarr_name_prefix, clobber=None):\n",
-    "    \"\"\"Save to zarr at zoom and lower resolutions\"\"\"\n",
-    "    dn=ds.copy()\n",
-    "    for x in range(zoom,0,-1):\n",
-    "        fn = outloc / f\"{zarr_name_prefix}_to_hp{x}.zarr\"\n",
     "\n",
-    "        if fn.exists():\n",
-    "            if clobber:\n",
-    "                print(f\"{fn} exists... remove\")\n",
-    "                do_save = True\n",
-    "                remove_directory(fn)\n",
-    "            else:\n",
-    "                print(f\"{fn} exists... coarsen but do not save\")\n",
-    "                do_save = False\n",
-    "        else:\n",
+    "def save_to_zarr(ds, fn, clobber=None):\n",
+    "    if fn.exists():\n",
+    "        if clobber:\n",
+    "            print(f\"{fn} exists... remove\")\n",
     "            do_save = True\n",
+    "            remove_directory(fn)\n",
+    "        else:\n",
+    "            print(f\"{fn} exists... coarsen but do not save\")\n",
+    "            do_save = False\n",
+    "    else:\n",
+    "        do_save = True\n",
+    "    if do_save:\n",
+    "        store = zarr.storage.LocalStore(fn)\n",
+    "        ds.chunk({\"time\": -1, \"cell\": -1}).to_zarr(store, encoding=get_encoding(ds))\n",
+    "        print(f'Saved: {str(fn)}')\n",
+    "    else:\n",
+    "        print('Determined not to save to zarr.')\n",
+    "\n",
+    "\n",
+    "def mpas_hp_to_zarr(ds, zoom, outloc, zarr_name_prefix, clobber=None):\n",
+    "    \"\"\"Save to zarr at zoom and lower resolutions\n",
+    "    \n",
+    "    notes\n",
+    "    -----\n",
+    "    the iteration is from zoom-1 down to zero. Have to use\n",
+    "    zoom-1 because the computation is to coarsen from the \"current\"\n",
+    "    healpix level down to the next one.\n",
+    "    \"\"\"\n",
+    "    dn=ds.copy()\n",
+    "    for x in range(zoom-1,0,-1):\n",
+    "        fn = outloc / f\"{zarr_name_prefix}_to_hp{x}.zarr\"\n",
     "\n",
     "        # coarsen by one level\n",
     "        dx = dn.coarsen(cell=4).mean()\n",
-    "        if do_save:\n",
-    "            store = zarr.storage.LocalStore(fn)\n",
-    "            dx.chunk({\"time\": -1, \"cell\": -1}).to_zarr(store, encoding=get_encoding(dx))\n",
-    "            print(f'Saved zoom = {x} in {str(fn)}')\n",
+    "        save_to_zarr(dx, fn, clobber=clobber)\n",
     "        # iterate\n",
     "        dn = dx.copy()\n",
     "    print(\"[mpas_hp_to_zarr] complete.\")"
@@ -373,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 10 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp10.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp10.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp9.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp9.zarr\n"
      ]
@@ -423,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 9 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp9.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp9.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp8.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp8.zarr\n"
      ]
@@ -440,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 8 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp8.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp8.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp7.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp7.zarr\n"
      ]
@@ -457,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 7 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp7.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp7.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp6.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp6.zarr\n"
      ]
@@ -474,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 6 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp6.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp6.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp5.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp5.zarr\n"
      ]
@@ -491,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 5 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp5.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp5.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp4.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp4.zarr\n"
      ]
@@ -508,7 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 4 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp4.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp4.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp3.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp3.zarr\n"
      ]
@@ -525,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 3 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp3.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp3.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp2.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp2.zarr\n"
      ]
@@ -542,13 +555,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved zoom = 2 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp2.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp2.zarr\n",
       "/glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp1.zarr exists... remove\n",
       "Removed directory: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp1.zarr\n",
-      "Saved zoom = 1 in /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp1.zarr\n",
+      "Saved: /glade/derecho/scratch/brianpm/healpix/test3_mpas_to_hp1.zarr\n",
       "[mpas_hp_to_zarr] complete.\n",
-      "CPU times: user 49.5 s, sys: 23.5 s, total: 1min 12s\n",
-      "Wall time: 1min 14s\n"
+      "CPU times: user 42.7 s, sys: 15.7 s, total: 58.3 s\n",
+      "Wall time: 58.5 s\n"
      ]
     },
     {
@@ -592,10 +605,247 @@
     "\n",
     "    dsout = remap_mpas_to_hp(data, eweights, evweights, order)\n",
     "\n",
+    "    # save highest resolution output\n",
+    "    fn = out_dir / f\"{zarr_prefix}_to_hp{order}.zarr\"\n",
+    "    save_to_zarr(dsout, fn, clobber=clobber_zarr)\n",
+    "\n",
+    "    # now coarsen and save zarr\n",
     "    mpas_hp_to_zarr(dsout, order, out_dir, zarr_prefix, clobber=clobber_zarr)\n",
     "\n",
     "\n",
     "mpas_to_hp_zarr(ds_mpas_clean, ds_static, zoom, weights_file, vert_weights_file, oloc, out_prefix, clobber_wgts=False, clobber_zarr=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mapping of variable names:\n",
+    "# mpas name : cmip name\n",
+    "vn_map = {\n",
+    "'initial_time':'',\n",
+    "'xtime':'',\n",
+    "'ivt':'',\n",
+    "'refl10cm_max':'',\n",
+    "'meanT_500_300':'',\n",
+    "'lh':'hflsd',\n",
+    "'hfx':'',\n",
+    "'olrtoa':'rlut',\n",
+    "'refl10cm_1km':'',\n",
+    "'precipw':'prw',\n",
+    "'u10':'uas',\n",
+    "'v10':'vas',\n",
+    "'q2':'huss',\n",
+    "'t2m':'tas',\n",
+    "'cape':'',\n",
+    "'cin':'',\n",
+    "'rainc':'',\n",
+    "'rainnc':'',\n",
+    "'i_rainc':'',\n",
+    "'i_rainnc':'',\n",
+    "'mslp':'psl',\n",
+    "'liquid_water_path':'clwvi',\n",
+    "'ice_water_path':'clivi',\n",
+    "'relhum_200hPa':'',\n",
+    "'relhum_250hPa':'',\n",
+    "'relhum_500hPa':'',\n",
+    "'relhum_700hPa':'',\n",
+    "'relhum_850hPa':'',\n",
+    "'relhum_925hPa':'',\n",
+    "'temperature_200hPa':'',\n",
+    "'temperature_250hPa':'',\n",
+    "'temperature_500hPa':'',\n",
+    "'temperature_700hPa':'',\n",
+    "'temperature_850hPa':'',\n",
+    "'temperature_925hPa':'',\n",
+    "'height_200hPa':'',\n",
+    "'height_250hPa':'',\n",
+    "'height_500hPa':'',\n",
+    "'height_700hPa':'',\n",
+    "'height_850hPa':'',\n",
+    "'height_925hPa':'',\n",
+    "'uzonal_200hPa':'',\n",
+    "'uzonal_250hPa':'',\n",
+    "'uzonal_500hPa':'',\n",
+    "'uzonal_700hPa':'',\n",
+    "'uzonal_850hPa':'',\n",
+    "'uzonal_925hPa':'',\n",
+    "'umeridional_200hPa':'',\n",
+    "'umeridional_250hPa':'',\n",
+    "'umeridional_500hPa':'',\n",
+    "'umeridional_700hPa':'',\n",
+    "'umeridional_850hPa':'',\n",
+    "'umeridional_925hPa':'',\n",
+    "'w_200hPa':'',\n",
+    "'w_250hPa':'',\n",
+    "'w_500hPa':'',\n",
+    "'w_700hPa':'',\n",
+    "'w_850hPa':'',\n",
+    "'w_925hPa':'',\n",
+    "'vorticity_200hPa':'',\n",
+    "'vorticity_250hPa':'',\n",
+    "'vorticity_500hPa':'rva500',\n",
+    "'vorticity_700hPa':'',\n",
+    "'vorticity_850hPa':'rva850',\n",
+    "'vorticity_925hPa':'',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial_time\n",
+      "xtime\n",
+      "ivt\n",
+      "refl10cm_max\n",
+      "meanT_500_300\n",
+      "lh\n",
+      "hfx\n",
+      "olrtoa\n",
+      "refl10cm_1km\n",
+      "precipw\n",
+      "u10\n",
+      "v10\n",
+      "q2\n",
+      "t2m\n",
+      "cape\n",
+      "cin\n",
+      "rainc\n",
+      "rainnc\n",
+      "i_rainc\n",
+      "i_rainnc\n",
+      "mslp\n",
+      "liquid_water_path\n",
+      "ice_water_path\n",
+      "relhum_200hPa\n",
+      "relhum_250hPa\n",
+      "relhum_500hPa\n",
+      "relhum_700hPa\n",
+      "relhum_850hPa\n",
+      "relhum_925hPa\n",
+      "temperature_200hPa\n",
+      "temperature_250hPa\n",
+      "temperature_500hPa\n",
+      "temperature_700hPa\n",
+      "temperature_850hPa\n",
+      "temperature_925hPa\n",
+      "height_200hPa\n",
+      "height_250hPa\n",
+      "height_500hPa\n",
+      "height_700hPa\n",
+      "height_850hPa\n",
+      "height_925hPa\n",
+      "uzonal_200hPa\n",
+      "uzonal_250hPa\n",
+      "uzonal_500hPa\n",
+      "uzonal_700hPa\n",
+      "uzonal_850hPa\n",
+      "uzonal_925hPa\n",
+      "umeridional_200hPa\n",
+      "umeridional_250hPa\n",
+      "umeridional_500hPa\n",
+      "umeridional_700hPa\n",
+      "umeridional_850hPa\n",
+      "umeridional_925hPa\n",
+      "w_200hPa\n",
+      "w_250hPa\n",
+      "w_500hPa\n",
+      "w_700hPa\n",
+      "w_850hPa\n",
+      "w_925hPa\n",
+      "vorticity_200hPa\n",
+      "vorticity_250hPa\n",
+      "vorticity_500hPa\n",
+      "vorticity_700hPa\n",
+      "vorticity_850hPa\n",
+      "vorticity_925hPa\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[print(f\"{dvname}\") for dvname in ds_mpas.data_vars]"
    ]
   },
   {
